PKCE javascript app